# unitree_cpp_deploy

./: .gitignore  LICENSE  README.md  README_zh.md  UPDATE.md
deploy/include/: DataLogger.h  unitree_articulation.h
deploy/include/FSM/: BaseState.h  CtrlFSM.h  FSMOverlayState.h  FSMState.h  OverlayState_Mimic.h  State_FixStand.h  State_Passive.h  State_RLBase.h
deploy/include/isaaclab/algorithms/: algorithms.h
deploy/include/isaaclab/envs/: manager_based_rl_env.h
deploy/include/isaaclab/manager/: manager_term_cfg.h  observation_manager.h
deploy/include/utils/: motion_selection.h  path_file_manager.h
deploy/robots/g1/: CMakeLists.txt  main.cpp
deploy/robots/g1/config/: config.yaml  config_bfm.yaml
deploy/robots/g1/include/: State_BFM.h  State_Mimic.h  State_OmniXtreme.h  Types.h
deploy/robots/g1/src/: State_BFM.cpp  State_Mimic.cpp  State_OmniXtreme.cpp  State_RLBase.cpp
deploy/robots/go2/: CMakeLists.txt  main.cpp
deploy/robots/go2/config/: config.yaml
deploy/robots/go2/include/: Types.h
deploy/robots/go2/src/: State_RLBase.cpp
deploy/tools/: visualize_feet_rel_base_height.py  visualize_feet_rel_base_height2.py  visualize_logs.py  visualize_position.py
deploy/tools/video/: extract_frames_from_video.py
docs/: g1_setup_zh.md  obs_group.md  robot_params.md
logs/g1/bfm/: .gitkeep
logs/g1/omnixtreme/: .gitkeep
logs/go2/kaiwu2025_v6-2_124004/exported/: policy.onnx
logs/rsl_rl/go2_moe_cts_137k_0.6739/params/: deploy.yaml
logs/rsl_rl/go2_moe_cts_fast_flat_v4_fz_54k/exported/: policy.onnx
(+10 files in other folders)
